--- a/Google.SignIn/source/Google.SignIn/Google.SignIn.targets
+++ b/Google.SignIn/source/Google.SignIn/Google.SignIn.targets
@@ -2,19 +2,19 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_GoogleSignInAssemblyName>Google.SignIn, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleSignInAssemblyName>
-		<_GoogleSignInItemsFolder>GSgnI-4.1.2</_GoogleSignInItemsFolder>
+		<_GoogleSignInItemsFolder>GSgnI-4.2.0</_GoogleSignInItemsFolder>
 		<_GoogleSignInSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleSignInItemsFolder)\</_GoogleSignInSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleSignInItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/2c56c7ee6c0f9977/GoogleSignIn-4.1.2.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/cc028211e24e6039/GoogleSignIn-4.2.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_GoogleSignInSDKBaseFolder)Frameworks\GoogleSignIn.framework">
 			<Kind>Framework</Kind>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC -lsqlite3</LinkerFlags>
-			<Frameworks>CoreText CoreGraphics Security</Frameworks>
+			<Frameworks>CoreText CoreGraphics LocalAuthentication Security</Frameworks>
 			<WeakFrameworks>SafariServices</WeakFrameworks>
 		</NativeReference>
 		<XamarinBuildRestoreResources Include="_GoogleSignInItems" />
@@ -85,12 +85,20 @@
 				<LogicalName>__monotouch_content_GoogleSignIn.bundle_ffi.lproj_fGoogleSignIn.strings</LogicalName>
 				<AssemblyName>$(_GoogleSignInAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
+			<RestoreAssemblyResource Include="$(_GoogleSignInSDKBaseFolder)Resources\GoogleSignIn.bundle\fr_CA.lproj\GoogleSignIn.strings">
+				<LogicalName>__monotouch_content_GoogleSignIn.bundle_ffr__CA.lproj_fGoogleSignIn.strings</LogicalName>
+				<AssemblyName>$(_GoogleSignInAssemblyName)</AssemblyName>
+			</RestoreAssemblyResource>
 			<RestoreAssemblyResource Include="$(_GoogleSignInSDKBaseFolder)Resources\GoogleSignIn.bundle\fr.lproj\GoogleSignIn.strings">
 				<LogicalName>__monotouch_content_GoogleSignIn.bundle_ffr.lproj_fGoogleSignIn.strings</LogicalName>
 				<AssemblyName>$(_GoogleSignInAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
 			<RestoreAssemblyResource Include="$(_GoogleSignInSDKBaseFolder)Resources\GoogleSignIn.bundle\he.lproj\GoogleSignIn.strings">
 				<LogicalName>__monotouch_content_GoogleSignIn.bundle_fhe.lproj_fGoogleSignIn.strings</LogicalName>
+				<AssemblyName>$(_GoogleSignInAssemblyName)</AssemblyName>
+			</RestoreAssemblyResource>
+			<RestoreAssemblyResource Include="$(_GoogleSignInSDKBaseFolder)Resources\GoogleSignIn.bundle\hi.lproj\GoogleSignIn.strings">
+				<LogicalName>__monotouch_content_GoogleSignIn.bundle_fhi.lproj_fGoogleSignIn.strings</LogicalName>
 				<AssemblyName>$(_GoogleSignInAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
 			<RestoreAssemblyResource Include="$(_GoogleSignInSDKBaseFolder)Resources\GoogleSignIn.bundle\hr.lproj\GoogleSignIn.strings">
