[Firebase] Edited Makefiles to build with the Xcode 10

--- a/Firebase.Core/externals/Makefile
+++ b/Firebase.Core/externals/Makefile
@@ -34,7 +34,7 @@ $(TARGETS):
 
 %-iphonesimulator:
 	@ $(eval currentTarget=$(subst -iphonesimulator,,$@))
-	@ $(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphonesimulator -arch i386 -arch x86_64 -configuration Release clean build
+	@ $(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphonesimulator -arch i386 -arch x86_64 -configuration Release build
 
 clean:
 	@ rm -rf Pods build *.framework
