--- a/Firebase.Storage/externals/Makefile
+++ b/Firebase.Storage/externals/Makefile
@@ -23,7 +23,7 @@ $(TARGETS):
 
 %-iphonesimulator:
 	$(eval currentTarget=$(subst -iphonesimulator,,$@))
-	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphonesimulator -arch i386 -arch x86_64 -configuration Release clean build
+	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphonesimulator -arch i386 -arch x86_64 -configuration Release build
 	@ find ./build/Release-iphonesimulator/$(currentTarget) -type d -name "*.framework" | xargs -I % mv % $@.framework
 
 clean:
