--- a/Google.TagManager/externals/Podfile
+++ b/Google.TagManager/externals/Podfile
@@ -1,14 +1,15 @@
 
 =begin
 Last run GoogleTagManager installed:
-* FirebaseAnalytics (5.0.1)
-* FirebaseCore (5.0.5)
-* FirebaseInstanceID (3.1.1)
+* FirebaseAnalytics (5.1.1)
+* FirebaseCore (5.1.2)
+* FirebaseInstanceID (3.2.1)
 * GoogleAnalytics (3.17.0)
+* GoogleAppMeasurement (5.1.1)
 * GoogleSymbolUtilities (1.1.2)
-* GoogleTagManager (7.0.0)
-* GoogleToolboxForMac (2.1.4)
-* GoogleUtilities (1.3.2)
+* GoogleTagManager (7.1.1)
+* GoogleUtilities (5.2.2)
+* GoogleUtilitiesLegacy (1.3.2)
 * nanopb (0.3.8)
 
 Check if main version or subversion number has changed. 
@@ -16,22 +17,23 @@ If yes, please, update *.targets files located in binding
 projects, also, update Podfile files if needed.
 
 In Google.TagManager binding project, you can find the .targets file of:
-* GoogleTagManager (7.0.0)
-* GoogleUtilities (1.3.2)
+* GoogleTagManager (7.1.1)
 * GoogleSymbolUtilities (1.1.2)
+* GoogleUtilitiesLegacy (1.3.2)
 
 In Google.Analytics binding project, you can find the .targets file of:
-* GoogleAnalytics (5.0.1)
+* GoogleAnalytics (3.17.0)
 
 In Firebase.Analytics binding project, you can find the .targets file of:
-* FirebaseAnalytics (5.0.1)
+* FirebaseAnalytics (5.1.1)
+* GoogleAppMeasurement (5.1.1)
 
 In Firebase.InstanceID binding project, you can find the .targets file of:
-* FirebaseInstanceID (3.1.1)
+* FirebaseInstanceID (3.2.1)
 
 In Firebase.Core binding project, you can find the Native Reference of:
-* FirebaseCore (5.0.5)
-* GoogleToolboxForMac (2.1.4)
+* FirebaseCore (5.1.2)
+* GoogleUtilities (5.2.2)
 * nanopb (0.3.8)
 =end
 
@@ -41,5 +43,5 @@ platform :ios, '8.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'GoogleTagManager' do
-	pod 'GoogleTagManager', '7.0.0'
+	pod 'GoogleTagManager', '7.1.1'
 end
