--- a/Firebase.Invites/externals/Podfile
+++ b/Firebase.Invites/externals/Podfile
@@ -1,17 +1,19 @@
 =begin
 Last run FirebaseInvites installed:
-* Firebase (5.4.0)
-* FirebaseAnalytics (5.0.1)
-* FirebaseCore (5.0.5)
-* FirebaseDynamicLinks (3.0.1)
-* FirebaseInstanceID (3.1.1)
+* Firebase (5.7.0)
+* FirebaseAnalytics (5.1.1)
+* FirebaseCore (5.1.2)
+* FirebaseDynamicLinks (3.0.2)
+* FirebaseInstanceID (3.2.1)
 * FirebaseInvites (3.0.0)
 * GTMOAuth2 (1.1.6)
-* GTMSessionFetcher (1.1.15)
-* GoogleAPIClientForREST (1.3.4)
-* GoogleSignIn (4.1.2)
+* GTMSessionFetcher (1.2.0)
+* GoogleAPIClientForREST (1.3.6)
+* GoogleAppMeasurement (5.1.1)
+* GoogleSignIn (4.2.0)
 * GoogleToolboxForMac (2.1.4)
-* Protobuf (3.6.0)
+* GoogleUtilities (5.2.2)
+* Protobuf (3.6.1)
 * nanopb (0.3.8)
 
 Check if main version or subversion number has changed. 
@@ -22,28 +24,30 @@ In Firebase.Invites binding project, you can find the .targets file of:
 * FirebaseInvites (3.0.0)
 
 and the Native Reference of:
-* GoogleAPIClientForREST (1.3.4)
+* GoogleAPIClientForREST (1.3.6)
 
 In Google.SignIn binding project, you can find the .targets file of:
-* GoogleSignIn (4.1.2)
+* GoogleSignIn (4.2.0)
 
 and the Native Reference of:
 * GTMOAuth2 (1.1.6)
 
 In Firebase.DynamicLinks binding project, you can find the .targets file of:
-* FirebaseDynamicLinks (3.0.1)
+* FirebaseDynamicLinks (3.0.2)
 
 In Firebase.Analytics binding project, you can find the .targets file of:
-* FirebaseAnalytics (5.0.1)
+* FirebaseAnalytics (5.1.1)
+* GoogleAppMeasurement (5.1.1)
 
 In Firebase.InstanceID binding project, you can find the .targets file of:
-* FirebaseInstanceID (3.1.1)
+* FirebaseInstanceID (3.2.1)
 
 In Firebase.Core binding project, you can find the Native Reference of:
-* FirebaseCore (5.0.5)
-* GTMSessionFetcher (1.1.15)
+* FirebaseCore (5.1.2)
+* GTMSessionFetcher (1.2.0)
 * GoogleToolboxForMac (2.1.4)
-* Protobuf (3.6.0)
+* GoogleUtilities (5.2.2)
+* Protobuf (3.6.1)
 * nanopb (0.3.8)
 =end
 
@@ -54,6 +58,6 @@ install! 'cocoapods', :integrate_targets => false
 use_frameworks!
 
 target 'FirebaseInvites' do
-	pod 'Firebase/Invites', '5.4.0'
-	pod 'GoogleAPIClientForREST', '1.3.4'
+	pod 'Firebase/Invites', '5.7.0'
+	pod 'GoogleAPIClientForREST', '1.3.6'
 end
