--- a/Firebase.Invites/source/Firebase.Invites/Firebase.Invites.targets
+++ b/Firebase.Invites/source/Firebase.Invites/Firebase.Invites.targets
@@ -2,19 +2,19 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseInvitesAssemblyName>Firebase.Invites, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseInvitesAssemblyName>
-		<_FirebaseInvitesItemsFolder>FInvts-3.0.0</_FirebaseInvitesItemsFolder>
+		<_FirebaseInvitesItemsFolder>FInvts-3.0.1</_FirebaseInvitesItemsFolder>
 		<_FirebaseInvitesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseInvitesItemsFolder)\</_FirebaseInvitesSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseInvitesItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/5afe5112bd33658a/FirebaseInvites-3.0.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/b3cf7389ab5b3cab/FirebaseInvites-3.0.1.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_FirebaseInvitesSDKBaseFolder)Frameworks\FirebaseInvites.framework">
 			<Kind>Framework</Kind>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC -lc++</LinkerFlags>
-			<Frameworks>AddressBook AssetsLibrary CoreMotion MessageUI QuartzCore CoreGraphics Security</Frameworks>
+			<Frameworks>AddressBook AssetsLibrary CoreMotion MessageUI QuartzCore CoreGraphics Security SystemConfiguration</Frameworks>
 		</NativeReference>
 		<XamarinBuildRestoreResources Include="_FirebaseInvitesItems" />
 	</ItemGroup>
