[US689675][Firebase][CloudFirestore] Updated to version 0.13.3.0 * [Task689745] Updated the Readme.md file * [Task689746] Updated the Podfile file * [Task689747] Updated the Makefile file * [Task689748] Updated the AssemblyInfo file

--- a/Firebase.Auth/externals/Makefile
+++ b/Firebase.Auth/externals/Makefile
@@ -18,7 +18,7 @@ $(TARGETS):
 
 %-iphoneos:
 	$(eval currentTarget=$(subst -iphoneos,,$@))
-	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphoneos -arch armv7 -arch arm64 -configuration Release clean build
+	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphoneos -arch armv7 -arch arm64 -configuration Release build
 	@ find ./build/Release-iphoneos/$(currentTarget) -type d -name "*.framework" | xargs -I % mv % ./
 
 %-iphonesimulator:
