[Firebase][AdMob] Fixed nuspec file * Added empty file to avoid adding all folders

--- a/Firebase.AdMob/nuget/Xamarin.Firebase.iOS.AdMob.nuspec
+++ b/Firebase.AdMob/nuget/Xamarin.Firebase.iOS.AdMob.nuspec
@@ -22,4 +22,7 @@
       </group>
     </dependencies>
   </metadata>
+  <files>
+    <file src="_._" target="lib/Xamarin.iOS10" />
+  </files>
 </package>
