--- a/Firebase.Core/externals/Podfile
+++ b/Firebase.Core/externals/Podfile
@@ -9,6 +9,7 @@ In Firebase.Core binding project, you can find the Native Reference of:
 * GTMSessionFetcher (1.2.0)
 * GoogleToolboxForMac (2.1.4)
 * GoogleUtilities (5.3.0)
+* GoogleAPIClientForREST (1.3.6)
 * Protobuf (3.6.1)
 * leveldb-library (1.20)
 * nanopb (0.3.8)
@@ -22,6 +23,7 @@ use_frameworks!
 
 $GOOGLE_UTILITIES_VERSION = '5.3.0'
 $GOOGLE_TOOLBOX_FOR_MAC_VERSION = '2.1.4'
+$GOOGLE_API_CLIENT_FOR_REST_VERSION = '1.3.6'
 $NANOPB_VERSION = '0.3.8'
 $GTM_SESSION_FETCHER = '1.2.0'
 $PROTOBUF_VERSION = '3.6.1'
@@ -43,6 +45,8 @@ target 'FirebaseCore' do
 	pod 'GoogleToolboxForMac/Logger', $GOOGLE_TOOLBOX_FOR_MAC_VERSION
 	pod 'GoogleToolboxForMac/StringEncoding', $GOOGLE_TOOLBOX_FOR_MAC_VERSION
 	pod 'GoogleToolboxForMac/URLBuilder', $GOOGLE_TOOLBOX_FOR_MAC_VERSION
+	pod 'GoogleAPIClientForREST', $GOOGLE_API_CLIENT_FOR_REST_VERSION
+	pod 'GoogleAPIClientForREST/Vision', $GOOGLE_API_CLIENT_FOR_REST_VERSION
 	pod 'nanopb', $NANOPB_VERSION
 	pod 'GTMSessionFetcher/Full', $GTM_SESSION_FETCHER
 	pod 'Protobuf', $PROTOBUF_VERSION
