--- a/Firebase.Core/source/Firebase.Core/Firebase.Core.csproj
+++ b/Firebase.Core/source/Firebase.Core/Firebase.Core.csproj
@@ -77,6 +77,10 @@
       <LinkerFlags>-ObjC -lz</LinkerFlags>
       <Frameworks>Security SystemConfiguration</Frameworks>
     </NativeReference>
+	<NativeReference Include="..\..\externals\GoogleAPIClientForREST.framework">
+      <Kind>Framework</Kind>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
