--- a/Firebase.MLKit/externals/Podfile
+++ b/Firebase.MLKit/externals/Podfile
@@ -1,28 +1,42 @@
 =begin
 Last run FirebaseMLKit installed:
 * Firebase (5.8.1)
-* FirebaseAnalytics (5.1.4)
 * FirebaseCore (5.1.3)
-* FirebaseInstanceID (3.2.1)
-* GoogleAppMeasurement (5.1.4)
+* FirebaseMLCommon (0.11.0)
+* FirebaseMLVision (0.11.0)
+* FirebaseMLVisionBarcodeModel (0.11.0)
+* FirebaseMLVisionFaceModel (0.11.0)
+* FirebaseMLVisionLabelModel (0.11.0)
+* FirebaseMLVisionTextModel (0.11.0)
+* GTMSessionFetcher (1.2.0)
+* GoogleAPIClientForREST (1.3.6)
+* GoogleMobileVision (1.3.2)
+* GoogleToolboxForMac (2.1.4)
 * GoogleUtilities (5.3.0)
-* nanopb (0.3.8)
+* Protobuf (3.6.1)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
-In Firebase.Analytics binding project, you can find the .targets file of:
-* FirebaseAnalytics (5.1.4)
-* GoogleAppMeasurement (5.1.4)
+In Firebase.MLKit binding project, you can find the .targets file of:
+* FirebaseMLVision (0.11.0)
+* FirebaseMLVisionBarcodeModel (0.11.0)
+* FirebaseMLVisionFaceModel (0.11.0)
+* FirebaseMLVisionLabelModel (0.11.0)
+* FirebaseMLVisionTextModel (0.11.0)
+* GoogleMobileVision (1.3.2)
 
-In Firebase.InstanceID binding project, you can find the .targets file of:
-* FirebaseInstanceID (3.2.1)
+In Firebase.MLKit.Common binding project, you can find the .targets file of:
+* FirebaseMLCommon (0.11.0)
 
 In Firebase.Core binding project, you can find the Native Reference of:
 * FirebaseCore (5.1.3)
+* GTMSessionFetcher (1.2.0)
+* GoogleAPIClientForREST (1.3.6)
+* GoogleToolboxForMac (2.1.4)
 * GoogleUtilities (5.3.0)
-* nanopb (0.3.8)
+* Protobuf (3.6.1)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
@@ -31,17 +45,13 @@ platform :ios, '8.0'
 install! 'cocoapods', :integrate_targets => false
 
 $FIREBASE_VERSION = '5.8.1'
-$TENSOR_FLOW_LITE_VERSION = '0.1.7'
 $GOOGLE_MOBILE_VISION = '1.3.2'
 
 target 'FirebaseMLKit' do
-	pod 'Firebase/MLCommon', $FIREBASE_VERSION
-	pod 'Firebase/MLModelInterpreter', $FIREBASE_VERSION
 	pod 'Firebase/MLVision', $FIREBASE_VERSION
 	pod 'Firebase/MLVisionBarcodeModel', $FIREBASE_VERSION
 	pod 'Firebase/MLVisionFaceModel', $FIREBASE_VERSION
 	pod 'Firebase/MLVisionLabelModel', $FIREBASE_VERSION
 	pod 'Firebase/MLVisionTextModel', $FIREBASE_VERSION
-	pod 'TensorFlowLite', $TENSOR_FLOW_LITE_VERSION
 	pod 'GoogleMobileVision', $GOOGLE_MOBILE_VISION
 end
