--- a/Firebase.MLKit/source/Firebase.MLKit/Firebase.MLKit.csproj
+++ b/Firebase.MLKit/source/Firebase.MLKit/Firebase.MLKit.csproj
@@ -35,7 +35,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Loader.cs" />
-    <Compile Include="Extension.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
@@ -48,9 +47,9 @@
       <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
       <Name>Firebase.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
-      <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
-      <Name>Firebase.InstanceID</Name>
+    <ProjectReference Include="..\..\..\Firebase.MLKit.Common\source\Firebase.MLKit.Common\Firebase.MLKit.Common.csproj">
+      <Project>{43A3F6C8-A2D8-414E-8509-F824D0B3B838}</Project>
+      <Name>Firebase.MLKit.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
