--- a/Firebase.MLKit.Common/source/Firebase.MLKit.Common/Firebase.MLKit.Common.targets
+++ b/Firebase.MLKit.Common/source/Firebase.MLKit.Common/Firebase.MLKit.Common.targets
@@ -2,19 +2,19 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseMLKitCommonAssemblyName>Firebase.MLKit.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseMLKitCommonAssemblyName>
-		<_FirebaseMLCommonItemsFolder>FMLCmmn-0.11.0</_FirebaseMLCommonItemsFolder>
+		<_FirebaseMLCommonItemsFolder>FMLCmmn-0.13.0</_FirebaseMLCommonItemsFolder>
 		<_FirebaseMLCommonSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseMLCommonItemsFolder)\Frameworks\</_FirebaseMLCommonSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseMLCommonItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/31e26bf59351607c/FirebaseMLCommon-0.11.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/73b3ba874bff8364/FirebaseMLCommon-0.13.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_FirebaseMLCommonSDKBaseFolder)FirebaseMLCommon.framework">
 			<Kind>Framework</Kind>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC -lc++ -lsqlite3 -lz</LinkerFlags>
-			<Frameworks>Foundation LocalAuthentication</Frameworks>
+			<Frameworks>Foundation LocalAuthentication QuartzCore Security</Frameworks>
 		</NativeReference>
 	</ItemGroup>
 </Project>
