--- a/Firebase.MLKit/source/Firebase.MLKit/Firebase.MLKit.csproj
+++ b/Firebase.MLKit/source/Firebase.MLKit/Firebase.MLKit.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Loader.cs" />
+    <Compile Include="Extension.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
