--- a/Firebase.InstanceID/source/Firebase.InstanceID/Firebase.InstanceID.csproj
+++ b/Firebase.InstanceID/source/Firebase.InstanceID/Firebase.InstanceID.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
