[Firebase][MLKit][ModelInterpreter] Added components folder * Added documentation * Added License * Added component.yaml * Added Firebase MLKit to manifest.yaml * Fix a path on nuspec * This closes #205

--- a/Firebase.MLKit.ModelInterpreter/nuget/Xamarin.Firebase.iOS.MLKit.ModelInterpreter.nuspec
+++ b/Firebase.MLKit.ModelInterpreter/nuget/Xamarin.Firebase.iOS.MLKit.ModelInterpreter.nuspec
@@ -25,6 +25,6 @@
     <file src="output/Firebase.MLKit.ModelInterpreter.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Firebase.MLKit/Firebase.MLKit.ModelInterpreter.targets" target="build/Xamarin.Firebase.iOS.MLKit.ModelInterpreter.targets" />
+    <file src="source/Firebase.MLKit.ModelInterpreter/Firebase.MLKit.ModelInterpreter.targets" target="build/Xamarin.Firebase.iOS.MLKit.ModelInterpreter.targets" />
   </files>
 </package>
